// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scan > compilerContext  1`] = `
{
  "json": {
    "pages": CommentArray [
      "pages/index",
      "pages/case0",
    ],
    "plugins": {
      "myPlugin": {
        "provider": "wxidxxxxxxxxxxxxxxxx",
        "version": "1.0.0",
      },
    },
    "subPackages": CommentArray [
      {
        "entry": "entry.js",
        "pages": CommentArray [
          "pages/cat",
          "pages/dog",
        ],
        "root": "packageA",
      },
      {
        "name": "pack2",
        "pages": CommentArray [
          "pages/apple",
          "pages/banana",
        ],
        "root": "packageB",
      },
    ],
    "usingComponents": {
      "custom-bar2": "/components/custom-bar2/index",
      "t-divider": "tdesign-miniprogram/divider/divider",
    },
  },
  "type": "app",
}
`;

exports[`scan > loadAppEntry  1`] = `
{
  "json": {
    "$schema": "https://vite.icebreaker.top/app.json",
    "componentFramework": "glass-easel",
    "pages": [
      "pages/index/index",
      "pages/index/vue",
    ],
    "sitemapLocation": "sitemap.json",
    "style": "v2",
    "subPackages": [
      {
        "dependencies": undefined,
        "entry": "index.js",
        "inlineConfig": undefined,
        "name": "pack1",
        "pages": [
          "pages/cat",
          "pages/dog",
        ],
        "root": "packageA",
      },
      {
        "dependencies": undefined,
        "entry": "index.js",
        "independent": true,
        "inlineConfig": {
          "define": {
            "import.meta.env.VITE_SUB_PACKAGE_B": ""sub-package-b"",
          },
        },
        "name": "pack2",
        "pages": [
          "pages/apple",
          "pages/banana",
        ],
        "root": "packageB",
      },
    ],
    "window": {},
  },
  "sitemapJson": {
    "$schema": "https://vite.icebreaker.top/sitemap.json",
    "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
    "rules": CommentArray [
      {
        "action": "allow",
        "page": "*",
      },
    ],
  },
  "themeJson": {
    "$schema": "https://vite.icebreaker.top/theme.json",
    "dark": {},
    "light": {},
  },
  "type": "app",
}
`;

exports[`scan > loadAppEntry  2`] = `
[
  {
    "entries": [
      "packageA/pages/cat",
      "packageA/pages/dog",
      "packageA/index",
    ],
    "styleEntries": undefined,
    "subPackage": {
      "dependencies": undefined,
      "entry": "index.js",
      "inlineConfig": undefined,
      "name": "pack1",
      "pages": [
        "pages/cat",
        "pages/dog",
      ],
      "root": "packageA",
    },
  },
  {
    "entries": [
      "packageB/pages/apple",
      "packageB/pages/banana",
      "packageB/index",
    ],
    "styleEntries": undefined,
    "subPackage": {
      "dependencies": undefined,
      "entry": "index.js",
      "independent": true,
      "inlineConfig": {
        "define": {
          "import.meta.env.VITE_SUB_PACKAGE_B": ""sub-package-b"",
        },
      },
      "name": "pack2",
      "pages": [
        "pages/apple",
        "pages/banana",
      ],
      "root": "packageB",
    },
  },
]
`;
